Overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ aside a {
 
 /* standard */
 .highlight {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 pre {
